Bug 95203 - Tonga GST/OMX/VCE encode broken since mesa: st/omx: Fix resource leak on OMX_ErrorNone
Summary: Tonga GST/OMX/VCE encode broken since mesa: st/omx: Fix resource leak on OMX_...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-29 10:36 UTC by Andy Furniss
Modified: 2016-04-29 15:30 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
gst-omx vce failing and working (2.19 KB, text/plain)
2016-04-29 10:36 UTC, Andy Furniss
Details

Description Andy Furniss 2016-04-29 10:36:41 UTC
Created attachment 123343 [details]
gst-omx vce failing and working

AMD Tonga since mesa commit -

commit b87856d25d1be1953dea30814994fc40cac5e573
Author: Robert Foss <robert.foss@collabora.com>
Date:   Thu Apr 21 17:49:20 2016 -0400

    st/omx: Fix resource leak on OMX_ErrorNone
    
    Avoid leaking buffer allocated for task if an error has occured.
    
    Coverity id: 1213929
    Signed-off-by: Robert Foss <robert.foss@collabora.com>
    Reviewed-by: Emil Velikov <emil.velikov@collabora.com>

I can't encode with gst/omx/vce. It just hangs doing nothing and when I <Control> c it it throws some errors and quits.

Attached is the output I see from failing followed by working with above commit reverted.
Comment 1 Emil Velikov 2016-04-29 12:57:11 UTC
Should be resolved with https://patchwork.freedesktop.org/patch/84551/
Comment 2 Andy Furniss 2016-04-29 13:16:39 UTC
(In reply to Emil Velikov from comment #1)
> Should be resolved with https://patchwork.freedesktop.org/patch/84551/

Yes, that fixes it, thanks.
Comment 3 Andy Furniss 2016-04-29 15:30:13 UTC
fixed mesa 4b1ea6910ee54afb30fd005eb1f8cf6f88338eda


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.