src/gallium/state_trackers/omx/vid_enc.c
@@ -1151,9 +1151,10 @@ static OMX_ERRORTYPE vid_enc_EncodeFrame(omx_base_PortType *port, OMX_BUFFERHEAD
    } else {
       /* ------- load input image into video buffer ---- */
       err = enc_LoadImage(port, buf, task->buf);
-      if (err != OMX_ErrorNone)
+      if (err != OMX_ErrorNone) {
          FREE(task);
          return err;
+      }
    }
 
    /* -------------- determine picture type --------- */
